feat(framework): tighten v11 public runtime boundaries